# PickNext

./: .env.example  .gitattributes  .gitignore  README.md  compose.local.yaml  compose.traefik.yaml  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_legacy_import.py  0003_legacy_data_repairs.py  0004_remove_item_soft_delete.py  0005_add_item_external_identity.py  0006_add_item_year_synopsis.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  tmdb.py
backend/app/scripts/: __init__.py  analyze_legacy_movies.py  import_legacy_movies.py  repair_legacy_import_data.py
backend/scripts/: d8_delete_smoke.py  i1_item_write_smoke.py  i3_collection_item_unlink_smoke.py  rc1_write_rc_smoke.py  rc2_bootstrap_fixtures.py  verify_0006_isolated.py
backend/tests/: conftest.py  test_app.py  test_collection_delete_api.py  test_collection_write_api.py  test_collections_read_api.py  test_health.py  test_item_external_identity.py  test_item_hard_delete_api.py  test_item_hard_delete_schema.py  test_item_image_urls.py  test_item_release_year.py  test_item_synopsis.py  test_item_write_api.py  test_legacy_analyze.py  test_legacy_import.py  test_legacy_repair.py  test_models.py  test_read_api.py  test_seed.py  test_tmdb_api.py  test_tmdb_client.py  test_tmdb_item_registration.py
docs/: 01-product-scope.md  (+9 more)
(+108 files in other folders)
